--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body{
 }
 
 #calculator{
+    
     padding: 20px;
     border: 8px solid #00F5D4;
     border-radius: 10%;
@@ -35,6 +36,7 @@ input{
 }
 
 #menu{
+    flex:1;
     width: 100%;
     display: flex;
     align-items: center;
@@ -43,6 +45,7 @@ input{
 }
 
 #menu button{
+    
     background-color: #F15BB5;
     text-shadow: none;
 }
