--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ input{
     align-items: center;
     justify-content: space-between;
     gap: 5px;
+    flex-wrap: wrap;
 }
 
 #menu button{
@@ -65,6 +66,8 @@ button{
     justify-content: center;
     font-size: larger;
     text-shadow: 0 0 4px #00F5D4, 0 0 8px #00F5D4;
+    flex: 1;
+    max-width: 90px;
 }
 
 .number{
