--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     background-color: #1E1E2F;
     box-shadow: 0 0 20px #00F5D4;
 
@@ -39,6 +39,7 @@ input{
     flex:1;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     gap: 5px;
@@ -89,4 +90,8 @@ button{
 
 #decimal-point{
     color: #FF6B35;
+}
+
+#answer{
+    color: #00ffff;
 }
