--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,14 @@ input{
     display: flex;
     align-items: center;
     gap: 5px;
+    width: 100%;
+}
+
+#top-menu-row{
+    display:flex;
+    justify-content: space-between;
+    width: 100%;
+    height: fit-content;
 }
 
 button{
@@ -69,6 +77,23 @@ button{
     text-shadow: 0 0 4px #00F5D4, 0 0 8px #00F5D4;
     flex: 1;
     max-width: 90px;
+}
+
+button:hover {
+    transform: scale(1.05);
+    background-color: #00aee0;
+}
+
+button:active {
+    transform: scale(0.95);
+    background-color: #009fca;
+}
+
+#buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
 }
 
 .number{
@@ -94,4 +119,28 @@ button{
 
 #answer{
     color: #00ffff;
+}
+
+#screen::placeholder {
+    color: #666;
+}
+
+.spacer {
+    visibility: hidden;
+    pointer-events: none;
+}
+
+#github{
+    background-color: #F15BB5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1 / 1;
+    padding: 0;
+}
+
+#github img{
+    width: 90%;
+    height: auto;
+    object-fit: contain;
 }
